# pinkybrain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  DONATIONS.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml  requirements-full.txt  requirements-minimal.txt  requirements.txt  requirements_autonomy.txt  setup.py  start.sh  test_p2p.sh
.github/: FUNDING.yml
assets/: dashboard_screenshot.html
clawhub-skill/: README.md  SKILL.md
config/: CONFIG_REFERENCE.md  model_catalog.json  node-v5.example.json
deploy/: Dockerfile  docker-compose.yml  install.sh  pinkybrain.service  uninstall.sh  unitybrain.service
docs/: ARCHITECTURE_AUDIT.md  AUTH_DESIGN.md  BUGBRAIN_V4_AUTO_COMPLETE.md  DESIGN_MODEL_SHARING.md  EARLY_ADOPTION.md  ENSEMBLING.md  GUIDE_INTERFACE.md  GUIDE_INTERNET_CAPABLE.md  GUIDE_NETWORK_DEPLOYMENT.md  GUIDE_PRODUCTION_ENHANCEMENT.md  GUIDE_TIMEOUTS.md  GUIDE_TRUE_P2P.md  GUIDE_USB_BOOTABLE.md  MODEL_SHARING.md  P2P.md  PLAN_PROMOTION.md  PLAN_TEST_PINKY.md  RAPPORT_TEST_PINKY.md  README_AR.md  README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_HI.md  README_JA.md  README_PT.md  README_RU.md  README_ZH.md  RESOURCE_LIMITS.md  SECURITY_AUDIT.md  SECURITY_FIXES.md  SECURITY_REAUDIT.md  SECURITY_REAUDIT_v5.2.md  SECURITY_V5_AUDIT.md  SHARING_PARITY.md  V5_PUBLIC_MESH.md  VISION_ALIGNMENT.md  index.html
examples/: example1_simple_query.py  example2_ensemble_query.py  example3_bugbrain_emancipation.py  example4_p2p_network.py
promo/: discord_announcement.md  discord_posts.md  facebook_post_FR.md  hn_post.md  launch_post.md  reddit_hn_post.md  reddit_posts.md  twitter_thread.md  twitter_thread_EN.md  twitter_thread_FR.md
scripts/: create_bugbrain_usb.sh  deploy_all.sh  setup_interactive.py  start_bug.sh
skill/: SKILL.md
skill-hermes/: SKILL.md
src/: __init__.py  adaptive_scheduler.py  bandwidth_quota.py  brain_llm.py  conversation_store.py  credit_system.py  model_registry.py  model_share_manager.py  model_specialist.py  network_sync.py  pinkybrain_cli.py  pinkybrain_v5.py  resource_guard.py  tracker_client.py
tests/: bench1_auth.py  bench2_memory.py  bench3_p2p.py  bench4_stress.py  bench5_query.py  benchmark_complete.py  benchmark_extreme.py  benchmark_extreme_cloud.py  benchmark_intermediate.py  benchmark_quick.py  benchmark_qwen3_8b.py  test_adaptive_scheduler.py  test_all.py  test_bandwidth_quota.py  test_bugbrain.py  test_credit_system.py  (+7 more)
(+19 files in other folders)
