[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinkybrain"
version = "5.2.0"
description = "PinkyBrain - Distributed P2P AI Network"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bug", email = "bug@pinkybrain.ai"},
    {name = "Denis Houet", email = "kamizool@protonmail.com"}
]
maintainers = [
    {name = "Bug", email = "bug@pinkybrain.ai"}
]
keywords = [
    "p2p",
    "ai",
    "distributed",
    "self-learning",
    "dht",
    "kademlia",
    "gossip",
    "decentralized",
    "machine-learning",
    "ensemble",
    "auto-emancipation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/PinkyBrain-ai/pinkybrain"
Documentation = "https://github.com/PinkyBrain-ai/pinkybrain#readme"
Repository = "https://github.com/PinkyBrain-ai/pinkybrain.git"
"Bug Tracker" = "https://github.com/PinkyBrain-ai/pinkybrain/issues"
Changelog = "https://github.com/PinkyBrain-ai/pinkybrain/blob/main/CHANGELOG.md"

[project.scripts]
pinkybrain = "src.pinkybrain_cli:main"
pinkybrain = "src.pinkybrain_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"